fix a tag wrap img tag with a display block and line-height:0

--- a/mentorbox/asset/css/index.css
+++ b/mentorbox/asset/css/index.css
@@ -162,8 +162,7 @@ ul,li{
 
 .slider__item  a{
     display: block;
-    width: 100%;
-    height: 100%;
+    line-height: 0;
 }
 
 .main img{
